tests/paczka1/small_fuzzy/72604060.err
Error in line 7: Efi A0 31,5
Error in line 5: S29 S123 17,3
Error in line 14: EqHa A929 -5,0
